[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hass-maestro"
version = "0.1.2"
description = "Strongly-typed Python automation framework for Home Assistant"
readme = "README.md"
license = "CC-BY-NC-4.0"
license-files = ["LICENSE"]
authors = [{ name = "Marshall Warners", email = "m@marshallwarners.com" }]
keywords = ["home-assistant", "automation", "home-automation", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11,<4",
    "aiohttp>=3.11,<4",
    "flask>=3,<4",
    "flask-sqlalchemy>=3.1,<4",
    "redis>=6,<7",
    "requests>=2.32,<3",
    "sqlalchemy>=2,<3",
    "structlog>=25,<26",
]

[project.urls]
Repository = "https://github.com/papa-marsh/hass-maestro"
Issues = "https://github.com/papa-marsh/hass-maestro/issues"

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2,<4"]
test = ["pytest>=8,<9", "freezegun>=1.5,<2"]

[project.scripts]
hass-maestro = "maestro._cli:main"

[project.entry-points.pytest11]
maestro = "maestro.testing._fixtures"

[dependency-groups]
dev = [
    "freezegun>=1.5,<2",
    "mypy>=1.17,<2",
    "pytest>=8,<9",
    "ruff>=0.12,<1",
    "types-cffi>=1.17",
    "types-flask-sqlalchemy>=2.5",
    "types-pyopenssl>=24",
    "types-requests>=2.32",
    "types-setuptools>=80",
    "types-sqlalchemy>=1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["maestro"]
exclude = ["maestro/testing/tests", "maestro/registry/README.md"]

[tool.ruff]
cache-dir = ".cache/ruff"
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "F",    # Pyflakes - basic Python errors
    "E",    # pycodestyle errors - PEP 8 violations
    "W",    # pycodestyle warnings - PEP 8 style issues
    "I",    # isort - import sorting
    "PGH",  # pygrep-hooks - miscellaneous linting rules
    "UP",   # pyupgrade - modernize Python code
    "S",    # flake8-bandit - security issues
    "C4",   # flake8-comprehensions - list/dict comprehension improvements
    "INP",  # flake8-no-pep420 - require __init__.py files
    "T20",  # flake8-print - detect print statements
    "SIM",  # flake8-simplify - code simplification suggestions
    "ARG",  # flake8-unused-arguments - unused function arguments
    "PTH",  # flake8-use-pathlib - prefer pathlib over os.path
    "FURB", # refurb - modernization and performance improvements
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E741", # Ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"maestro/_cli/**.py" = [
    "T20", # The CLI communicates with the user via stdout
]
"maestro/testing/_maestro_test.py" = [
    "S101", # Assert statements
]
"**/tests/**.py" = [
    "ARG001", # Unused Arg
    "E501",   # Line length
    "F401",   # Unused imports
    "S101",   # Assert statements
    "S106",   # Hardcoded password arguments
]

[tool.mypy]
python_version = "3.14"
cache_dir = ".cache/mypy"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
allow_redefinition = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["maestro"]
